// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/menu/demo/horizontal.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu  ant-menu-root ant-menu-horizontal"
  role="menu"
  tabindex="0"
>
  <li
    aria-selected="true"
    class="ant-menu-item ant-menu-item-selected"
    role="menuitem"
  >
    <i
      class="icon icon-mail_outline"
    />
    Navigation One
    <div
      class="ant-ripple-wrapper"
    />
  </li>
  <li
    aria-disabled="true"
    aria-selected="false"
    class="ant-menu-item ant-menu-item-disabled"
    role="menuitem"
  >
    <i
      class="icon icon-apps"
    />
    Navigation Two
    <div
      class="ant-ripple-wrapper"
    />
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-horizontal"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="item_2$Menu"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        Navigation Three - Submenu
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    aria-selected="false"
    class="ant-menu-item"
    role="menuitem"
  >
    <a
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
      Navigation Four - Link
    </a>
    <div
      class="ant-ripple-wrapper"
    />
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu  ant-menu-root ant-menu-inline"
  role="menu"
  style="width:256px"
  tabindex="0"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <ul
      aria-activedescendant=""
      class="ant-menu  ant-menu-sub ant-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        class=" ant-menu-item-group"
      >
        <div
          class="ant-menu-item-group-title"
          title="Item 1"
        >
          Item 1
        </div>
        <ul
          class="ant-menu-item-group-list"
        >
          <li
            aria-selected="true"
            class="ant-menu-item ant-menu-item-selected"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 1
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 2
            <div
              class="ant-ripple-wrapper"
            />
          </li>
        </ul>
      </li>
      <li
        class=" ant-menu-item-group"
      >
        <div
          class="ant-menu-item-group-title"
          title="Item 2"
        >
          Item 2
        </div>
        <ul
          class="ant-menu-item-group-list"
        >
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 3
            <div
              class="ant-ripple-wrapper"
            />
          </li>
          <li
            aria-selected="false"
            class="ant-menu-item"
            role="menuitem"
            style="padding-left:48px"
          >
            Option 4
            <div
              class="ant-ripple-wrapper"
            />
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/inline-collapsed.md correctly 1`] = `
<div
  style="width:256px"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-flat"
    style="margin-bottom:16px"
    type="button"
  >
    <i
      class="icon icon-folder"
    />
    <div
      class="ant-ripple-wrapper"
    />
  </button>
  <ul
    aria-activedescendant=""
    class="ant-menu  ant-menu-root ant-menu-inline"
    role="menu"
    tabindex="0"
  >
    <li
      aria-selected="true"
      class="ant-menu-item ant-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-pie_chart_outlined"
      />
      <span>
        Option 1
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-desktop_windows"
      />
      <span>
        Option 2
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-inbox"
      />
      <span>
        Option 3
      </span>
      <div
        class="ant-ripple-wrapper"
      />
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-mail_outline"
          />
          <span>
            Navigation One
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        aria-activedescendant=""
        class="ant-menu  ant-menu-sub ant-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 5
          <div
            class="ant-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 6
          <div
            class="ant-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 7
          <div
            class="ant-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 8
          <div
            class="ant-ripple-wrapper"
          />
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub2$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-apps"
          />
          <span>
            Navigation Two
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/sider-current.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu  ant-menu-root ant-menu-inline"
  role="menu"
  style="width:256px"
  tabindex="0"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
  >
    <div
      aria-expanded="true"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
    <ul
      aria-activedescendant=""
      class="ant-menu  ant-menu-sub ant-menu-inline"
      id="sub1$Menu"
      role="menu"
    >
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 1
        <div
          class="ant-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 2
        <div
          class="ant-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 3
        <div
          class="ant-ripple-wrapper"
        />
      </li>
      <li
        aria-selected="false"
        class="ant-menu-item"
        role="menuitem"
        style="padding-left:48px"
      >
        Option 4
        <div
          class="ant-ripple-wrapper"
        />
      </li>
    </ul>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-inline"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title"
      style="padding-left:24px"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/menu/demo/switch-mode.md correctly 1`] = `
<div>
  <span
    class="ant-switch"
    tabindex="0"
  >
    <span
      class="ant-switch-inner"
    />
  </span>
   Change Mode
  <span
    class="ant-divider"
    style="margin:0 1em"
  />
  <br />
  <br />
  <ul
    aria-activedescendant=""
    class="ant-menu  ant-menu-root ant-menu-inline"
    role="menu"
    style="width:256px"
    tabindex="0"
  >
    <li
      aria-selected="true"
      class="ant-menu-item ant-menu-item-selected"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-mail_outline"
      />
      Navigation One
      <div
        class="ant-ripple-wrapper"
      />
    </li>
    <li
      aria-selected="false"
      class="ant-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      <i
        class="icon icon-perm_contact_calendar"
      />
      Navigation Two
      <div
        class="ant-ripple-wrapper"
      />
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open"
    >
      <div
        aria-expanded="true"
        aria-haspopup="true"
        aria-owns="sub1$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-apps"
          />
          <span>
            Navigation Three
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
      <ul
        aria-activedescendant=""
        class="ant-menu  ant-menu-sub ant-menu-inline"
        id="sub1$Menu"
        role="menu"
      >
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 3
          <div
            class="ant-ripple-wrapper"
          />
        </li>
        <li
          aria-selected="false"
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          Option 4
          <div
            class="ant-ripple-wrapper"
          />
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            aria-owns="sub1-2$Menu"
            class="ant-menu-submenu-title"
            style="padding-left:48px"
            title="Submenu"
          >
            Submenu
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
        </li>
      </ul>
    </li>
    <li
      class="ant-menu-submenu ant-menu-submenu-inline"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        aria-owns="sub2$Menu"
        class="ant-menu-submenu-title"
        style="padding-left:24px"
      >
        <span>
          <i
            class="icon icon-settings"
          />
          <span>
            Navigation Four
          </span>
        </span>
        <i
          class="ant-menu-submenu-arrow"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/menu/demo/vertical.md correctly 1`] = `
<ul
  aria-activedescendant=""
  class="ant-menu  ant-menu-root ant-menu-vertical"
  role="menu"
  style="width:256px"
  tabindex="0"
>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub1$Menu"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-mail_outline"
        />
        <span>
          Navigation One
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub2$Menu"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-apps"
        />
        <span>
          Navigation Two
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
  <li
    class="ant-menu-submenu ant-menu-submenu-vertical"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      aria-owns="sub4$Menu"
      class="ant-menu-submenu-title"
    >
      <span>
        <i
          class="icon icon-settings"
        />
        <span>
          Navigation Three
        </span>
      </span>
      <i
        class="ant-menu-submenu-arrow"
      />
    </div>
  </li>
</ul>
`;
